- Added scrollTo functionality the “See the Breakdown” button on the landing page. When the user clicks this button the page will now scroll down to the treeMap section. - Added a max-height media query to the landing section of the homepage so that users with smaller screen (vertically) can see the buttons without having to scroll. - Added a min height to all of the visualizations on the Search Results page. - Fixed the form field within the Search filter so that it doesn’t wrap to two lines on smaller screens.

--- a/src/_scss/pages/search/results/visualizations/geo/geoVisualization.scss
+++ b/src/_scss/pages/search/results/visualizations/geo/geoVisualization.scss
@@ -1,12 +1,12 @@
 .results-visualization-geo-section {
-    padding: 3rem 3.5rem;
+    padding: ($global-pad * 2) rem(35);
     position: relative;
 
     @import "./_topSection";
 
     .map-container {
         width: 100%;
-        height: 475px;
+        height: rem(475);
     }
 
     @import "./map/map";
