--- a/src/_scss/pages/search/results/visualizations/rank/rankVisualization.scss
+++ b/src/_scss/pages/search/results/visualizations/rank/rankVisualization.scss
@@ -1,5 +1,5 @@
 .results-visualization-rank-section {
-    padding: 3rem 3.5rem;
+    padding: ($global-pad * 2) rem(35);
 
     @import "./_title";
     @import "./_topSection";
@@ -15,11 +15,14 @@
     }
 
     .results-visualization-message {
-        margin-top: 1rem;
+        margin-top: rem(10);
         font-size: $small-font-size;
         color: $color-base;
         text-align: center;
     }
 
+.results-visualization-rank-container{
+    min-height: rem(334);
+}
     @import "./_pager";
 }
